@@ -1,27 +1,27 @@
 # NAME
 
-WWW::Dojin::Event - 同人イベントのサークルリストを取得・パースする
+WWW::DojinEvent - 同人イベントのサークルリストを取得・パースする
 
 # SYNOPSIS
 
-    use WWW::Dojin::Event;
+    use WWW::DojinEvent;
 
-    $circle_list = WWW::Dojin::Event->from_website('COMIC1', '/path/to/circle_list_file', '/tmp/dir');
+    $circle_list = WWW::DojinEvent->from_website('COMIC1', '/path/to/circle_list_file', '/tmp/dir');
 
     # or
 
-    WWW::Dojin::Event->download('http://www.comic1.jp/CM7_circle_list2.htm', 'comic1_circle_list.html');
-    $circle_list = WWW::Dojin::Event->parse('COMIC1', 'comic1_circle_list.html');
+    WWW::DojinEvent->download('http://www.comic1.jp/CM7_circle_list2.htm', 'comic1_circle_list.html');
+    $circle_list = WWW::DojinEvent->parse('COMIC1', 'comic1_circle_list.html');
 
 # DESCRIPTION
 
 同人イベントのサークルリストをPerlの変数構造へ変換します
 
-_WWW::Dojin::Event::\*_にある各種同人イベントモジュールのラッパーとして機能します
+_WWW::DojinEvent::\*_にある各種同人イベントモジュールのラッパーとして機能します
 
 # MODULES
 
-_WWW::Dojin::Event_下にあるモジュールの一覧
+_WWW::DojinEvent_下にあるモジュールの一覧
 
 - COMIC1 [http://www.comic1.jp/](http://www.comic1.jp/)
 - Reitaisai [http://reitaisai.com/](http://reitaisai.com/)
