@@ -2,9 +2,9 @@ use strict;
 use Test::More;
 
 use_ok $_ for qw(
-    WWW::Dojin::Event
-    WWW::Dojin::Event::COMIC1
-    WWW::Dojin::Event::Reitaisai
+    WWW::DojinEvent
+    WWW::DojinEvent::COMIC1
+    WWW::DojinEvent::Reitaisai
 );
 
 done_testing;
