@@ -1,4 +1,6 @@
-Revision history for Perl extension WWW-Dojin-Event
+Revision history for Perl extension WWW-DojinEvent
+
+{{$NEXT}}
 
 0.01
 
